--- a/INDEX.HTM
+++ b/INDEX.HTM
@@ -22,11 +22,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="./shared/css/MyFontsWebfontsKit.css" type="text/css">
-    <link rel="stylesheet" href="shared/mobile/css/language1.2.css" type="text/css" media="screen"/>
-    <link rel="stylesheet" href="shared/mobile/css/main2.3.css">
-    <link rel="stylesheet" href="shared/mobile/css/css2.0.1.css">
-    <link rel="stylesheet" href="shared/mobile/css/font_awesome.css" type="text/css">
-    <link rel="stylesheet" href="shared/mobile/css/response2.9.css">
+    <link rel="stylesheet" href="shared/css/language1.2.css" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="shared/css/main2.3.css">
+    <link rel="stylesheet" href="shared/css/css2.0.1.css">
+    <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/font-awesome/5.14.0/css/all.css" type="text/css">
+    <link rel="stylesheet" href="shared/css/response2.9.css">
 
     <script src="shared/js/jquery.1.7.2.min.js" type="text/javascript"></script>
     <script src="shared/js/jquery.cycle.all.js" type="text/javascript"></script>
